# final_project_test

./: .gitignore  CMakeLists.txt  Final_Project.pdsprj  Final_Project.pdsprj.AMR.amr77.workspace  build.sh
Adc/: Adc.c  Adc.h  Adc_Private.h
App/: dispatcher.c  dispatcher.h  elevator_fsm.c  elevator_fsm.h  isr_handlers.c  system_defs.h  telemetry.c  telemetry.h
Dma/: Dma.c  Dma.h  Dma_Private.h
Exti/: Exti.c  Exti.h  Exti_Private.h
Gpio/: Gpio.c  Gpio.h  Gpio_Private.h
Keypad/: Keypad.c  Keypad.h
Lcd/: Lcd.c  Lcd.h
Lib/: Bit_Math.h  Nvic.h  Utils.c  Utils.h
Project Backups/: Final_Project [20260513, 02-42-26].pdsprj
Pwm/: Pwm.c  Pwm.h
Rcc/: Rcc_Private.h
SevenSeg/: SevenSeg.c  SevenSeg.h
Spi/: Spi.c  Spi.h  Spi_Private.h
Timer/: Timer.c  Timer.h  Timer_Private.h
Uart/: Uart.c  Uart.h  Uart_Private.h
cmake/: ArmToolchain.cmake  IncludeList.cmake  SourceList.cmake
src/: master_main.c  slave_main.c
test/: spi_dispatcher_test.c
